// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingStatus render active 1`] = `
<div>
  <div
    class="p-4 flex items-center justify-between"
  >
    <div
      class="uppercase"
    >
      service
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="p-1 md:p-2 rounded border rounded-full"
      >
        <div
          class="flex items-center gap-2"
        >
          <p
            class="text-sm hidden md:block leading-4"
          >
            Active
          </p>
          <div
            class="rounded-full w-3 h-3 md:w-4 md:h-4 bg-green-500"
          />
        </div>
      </div>
      <button
        class="rounded bg-red-500 text-white px-2 py-1 text-sm"
        type="button"
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`LoadingStatus render error 1`] = `
<div>
  <div
    class="p-4 flex items-center justify-between"
  >
    <div
      class="uppercase"
    >
      service
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="p-1 md:p-2 rounded border rounded-full"
      >
        <div
          class="flex items-center gap-2"
        >
          <p
            class="text-sm hidden md:block leading-4"
          >
            Error
          </p>
          <div
            class="rounded-full w-3 h-3 md:w-4 md:h-4 bg-red-500"
          />
        </div>
      </div>
      <button
        class="rounded bg-red-500 text-white px-2 py-1 text-sm"
        type="button"
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`LoadingStatus render inactive 1`] = `
<div>
  <div
    class="p-4 flex items-center justify-between"
  >
    <div
      class="uppercase"
    >
      service
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="p-1 md:p-2 rounded border rounded-full"
      >
        <div
          class="flex items-center gap-2"
        >
          <p
            class="text-sm hidden md:block leading-4"
          >
            Inactive
          </p>
          <div
            class="rounded-full w-3 h-3 md:w-4 md:h-4 bg-red-500"
          />
        </div>
      </div>
      <button
        class="rounded bg-red-500 text-white px-2 py-1 text-sm"
        type="button"
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`LoadingStatus render loading 1`] = `
<div>
  <div
    class="p-4 flex items-center justify-between"
  >
    <div
      class="uppercase"
    >
      service
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="p-1 md:p-2 rounded border rounded-full"
      >
        <div
          class="flex items-center gap-2"
        >
          <p
            class="text-sm hidden md:block leading-4"
          >
            Loading
          </p>
          <div
            class="rounded-full w-3 h-3 md:w-4 md:h-4 bg-gray-500"
          />
        </div>
      </div>
      <button
        class="rounded bg-red-500 text-white px-2 py-1 text-sm"
        type="button"
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;

exports[`LoadingStatus render null data 1`] = `
<div>
  <div
    class="p-4 flex items-center justify-between"
  >
    <div
      class="uppercase"
    >
      service
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="p-1 md:p-2 rounded border rounded-full"
      >
        <div
          class="flex items-center gap-2"
        >
          <p
            class="text-sm hidden md:block leading-4"
          >
            No Data
          </p>
          <div
            class="rounded-full w-3 h-3 md:w-4 md:h-4 bg-red-500"
          />
        </div>
      </div>
      <button
        class="rounded bg-red-500 text-white px-2 py-1 text-sm"
        type="button"
      >
        Refresh
      </button>
    </div>
  </div>
</div>
`;
